--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,11 @@ a:visited{
     color: #01B1EA;
 }
 
+#carrito{
+    width: 35px;
+    --cart-grid-row:2/3
+}
+
 a:hover{
     color: #555555;
 }
@@ -56,12 +61,12 @@ td{
 /*HEADER*/
 
 #header{
-    height: 145px;
-    background: #F0F0F0;
+   /* height: 145px;*/
+    /*background: #F0F0F0;*/
 }
 
 #logo{
-    padding: 20px;
+    padding: 7px;
     margin-left: 20px;
     float:left;
 }
@@ -77,7 +82,7 @@ td{
     letter-spacing: 4px;
     font-family: 'Open Sans', Helvetica, Arial;
     text-transform: uppercase;
-    color: #01B1EA;
+    color: #0D0D0D;
     font-weight: bold;
     text-decoration: none;
     margin-top: 18px;
@@ -93,10 +98,10 @@ td{
 /*MENU*/
 #menu{
     clear:both;
-    background: #222;
+    background: black;
     color: white;
     height: 55px;
-    border-bottom: 4px solid #01B1EA;
+    border-bottom: 4px solid #FFC300;
 }
 
 #menu ul{
@@ -257,11 +262,12 @@ input[type="button"],
 input[type="submit"],
 button{
     display:block;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 /*CENTRAL*/
 #central{
+    /*background:url(../img/background.jpg) no-repeat !important;*/
     width: 72%;
     min-height: 500px;
     float: right;
